fix showcase image style issue on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1082,7 +1082,9 @@ footer .copyright{
 
 
     /* Showcase */
-    .showcase{
+    .showcase,
+    .services-intro .container
+    {
         height: 400px;
     }
 
